MH-5737 Added JAVA_OPTS like suggested from Josh
git-svn-id: https://opencast.jira.com/svn/MH/trunk@9172 e6edf6fb-f266-4316-afb4-e53d95876a76